assets/css/style.css
body {
    display: flex;
    flex-direction: column;
    margin: auto;
    font-family: Arial, Helvetica, sans-serif;
    color: #cccccc;
    background: url("../images/asanoha-400px.png");
}

.mainHeader {
    background: #ffffff;
    height: fit-content;
    border-bottom: 3px solid #dddddd;
}

.headerBox {
    margin-left: 13%;
    margin-bottom: auto;
    height: fit-content;
    width: fit-content;
    text-align: inherit;
    background-color:#4aaaa5;
    padding-right: 3%;
    padding-left: 3%;
    float: left;
}

h1 {
    color: #ffffff;
}

h2 {
    color: #4aaaa5;
    padding-bottom: 5%;
    border-bottom: 2px solid #cccccc;
}

.heading {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.linkToPage {
    margin-right: 13%;
    float: right;
    padding-top: 1%;
    word-spacing: 10px;
}

li {
    display: inline;
    color: #cccccc;
}
a {
    color: #cccccc;
    text-decoration-line: none;
}

img {
    margin-right: 2%;
    display: inline-block;
}

.wrapper {
    margin: 13%;
    margin-top: 3%;
    border: 1px solid #cccccc;
    padding: 2%; 
    background-color: #ffffff;
}
.box {
    display: block;
}
p {
    color: #777777;
    line-height: 200%;
    margin-block-start: auto;
}
.myText {
    width: 100%;
    color: inherit;
}
#myTextArea {
    width: 100%;
    border-color: #cccccc;
}
.buttonBox {
    margin-left: auto;
    margin-bottom: auto;
    height: fit-content;
    width: fit-content;
    text-align: inherit;
    background-color:#4aaaa5;
    padding-right: 3%;
    padding-left: 3%;
    float: left;    
}
button {
    color: #ffffff;
    background-color: #4aaaa5;
    border: none;
    padding: 1%;
}

footer {
    border-top: 8px solid #4aaaa5;
    height: 15px;
    background-color: #666666;
    padding-top: 3%;
    text-anchor: middle;
    text-align: center;
    font-size: 10px;
    color: #cccccc;
    position: sticky;
    font-display: bottom;
}

